# YCSB-C

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mk_dataset.sh  run.sh
core/: CMakeLists.txt  core_workload.cc  core_workload.h  scrambled_zipfian_generator.h
db/: CMakeLists.txt  basic_db.h  cmpt_db.cuh  db_factory.cc  db_factory.cu  gmpt_2PI_db.cuh  gmpt_FLC_db.cuh
other_workloads/: normal.spec  outofcore.spec
workloads/: uniform.spec  workloada.spec  zipf06.spec  zipf09.spec  zipf12.spec  zipf15.spec
